--- a/pages/code_pure.html
+++ b/pages/code_pure.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>代码文本</title>
+    <title>code.cpp</title>
 </head>
 <body>
 <p>You have encountered an unexpected error while loading this file. This might lead to crucial loss of data.Please try again later.</p>
